--- a/style.css
+++ b/style.css
@@ -1,95 +1,101 @@
-body{
-background: linear-gradient(#60ebeb 40%, #27ae60 45%);
+html, body
+{
+  height: 100%;
+  margin: 0;
 }
 
-.h1 {
-  color: rgb(30, 255, 0);
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 50px;
-  margin-top: 10px;
+body
+{
+background-image: linear-gradient(to right top, #53d874, #5aace2, #c4df66, #e2b06d, #a05fd4);
 }
 
-#sign-in {
-  background-color: rgb(223, 211, 211);
-  margin-top: 140px;
-  width: 425px;
-  height: 350px;
-  border-radius: 30px;
-  margin-right: 700px;
+.header
+{
+	color: white;font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
+}
+.header img
+{
+	width: 80px;margin-left: -15px;
 }
 
-input {
-  height: 25px;
-  width: 300px;
-  text-align: center;
-  font-family: cursive;
-  color: rgb(0, 0, 255);
-  font-weight: bolder;
-  background-color: rgb(255, 255, 255);
-  margin-top: 20px;
-  font-size: 20px;
+.login_div
+{
+	background: rgba(255,255,255,0.8);float: none;border-radius: 15px;
 }
 
-.mbtn {
-  font-size: 35px;
-  background-color: rgb(37, 52, 184);
-  color: rgb(255, 208, 0);
-  border-width: 6px;
-  border-color: rgb(0, 0, 0);
-  margin-top: 20px;
+.logo
+{
+	width: 80px;margin-top: 30px;border-radius: 40px;
 }
 
-#logout {
-  font-size: 20px;
-  float: right;
+.login_button
+{
+	width: 30%;border-width: 3px;border-color: black;font-size: 30px;
 }
 
-#tred {
-  font-size: 40px;
-  margin-left: 900px;
-  margin-top: -400px;
+.room_name
+{
+	cursor: pointer;
+	font-size: 20px;
 }
 
-#output {
-  padding: 10px; width:50%;background: rgba(255,255,255,0.8);border-radius: 15px;margin-left: 700px;
 
+#logout
+{
+	font-size: 20px; float: right;
 }
 
-#output_rooms {
-  margin-left: 900px;
-  background-color: white;
-  border-radius: 25px;
-  border-width: 6px;
-  border-color: black;
-  height: fit-content;
-  width: fit-content;
+
+#output
+{
+	padding: 10px; width:100%;background: rgba(255,255,255,0.8);border-radius: 15px;
 }
 
-#msg_output {
-  color: black;
-  font-size: 30px;
-  font-weight: bolder;
-  background-color: white;
-  width: 1500px;
-  height: 500px;
-  text-align: left;
-  font-family: cursive;
+.input_div_room_page
+{
+	width: 80%;
 }
 
-#msg {
-  background-color: rgb(126, 221, 189);
-  width: 1300px;
-  height: 35px;
-  color: black;
-  font-family: cursive;
-  text-align: left;
-  font-size: 24px;
+.input_div label
+{
+	color: white;font-size: 20px;
 }
 
-#btn__ {
-  color: green;
-  background-color: rgb(255, 255, 255);
-  font-size: 35px;
-  font-family: cursive;
-  font-weight: bolder;
+
+.input_div_message_page
+{
+	bottom: 0px;width: 100%;background: rgb(69, 216, 221); margin-top: 300px;height: 220px;
+}
+.input_div_message_page label
+{
+	color: black;
+}
+.input_div_message_page #msg
+{
+	width: 95%;background-color: rgb(209, 216, 107);color: blue;font-family: cursive;font-weight: bolder;font-size: 22px;
+}
+.input_div_message_page button{
+	width: 8%; 
+	font-size: 35px;
+}
+.color_white
+{
+	color: white
+}
+
+.user_tick
+{
+	width:20px;
+}
+.message_h4
+{
+	padding-left:5px;color:grey;
+}
+
+.uuser_name {
+	background-color: rgb(69, 214, 106);
+	color: black;
+	font-size: 20px;
+	font-weight: bolder;
+	font-family: cursive;
 }
